--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -173,10 +173,10 @@
             <img src="/static/anilist_icon.png" alt="AniList" style="width: 20px; height: auto; vertical-align: middle;"> AniList
         </a>
         <a href="#" id="link-bato" class="btn btn-primary" target="_blank">
-             Bato
+            <img src="/static/bato_icon.png" alt="Bato" style="width: 20px; height: auto; vertical-align: middle;"> Bato
         </a>
         <a href="#" id="link-mal" class="btn btn-primary" target="_blank">
-             MAL
+            <img src="/static/mal_icon.png" alt="Mal" style="width: 20px; height: auto; vertical-align: middle;"> MAL
         </a>
     </div>
     
@@ -267,6 +267,7 @@
             
                     
             <!-- AniList Icon -->
+            <div class="bato-icon" onclick="openBatoFromCover(this.parentNode.getAttribute('data-bato-link'))"></div>
             <div class="anilist-icon" onclick="openAniList(this.parentNode.getAttribute('data-anilist-url'))"></div>
 
             <div class="stats">
