✨ Add db_session to the login route
ℹ️ Adding db_session to the login route in order to commit the changes to the database only when the user successfully logs in. Also added a try-except block to handle exceptions and rollback changes if necessary. 

🚀 Changes focus on improving data consistency and error handling in the login functionality.

🚀WIP favicon

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,8 +33,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Link to gasp, to animate hearts -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.0/dist/gsap.min.js"></script>
+    <link rel="icon" href="{{ url_for('static', filename='fav_icon_wip.png') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='fav_icon_wip.png') }}" type="image/x-icon">
 
-    <title>My Reading List</title>
+    <title>Eastern Tales Shelf</title>
 </head>
     
     
